# dmi-extension

./: .gitignore  README.md  bun.lockb  package.json  rollup.config.js  tsconfig.json
extension/: background.ts  manifest.ts  types.d.ts
extension/background/: index.ts  onHeadersReceived.ts
extension/common/: messaging.ts
extension/content/: file.ts
extension/pages/viewer/: App.tsx  index.css
src/: background.ts  manifest.ts
src/content/: file.ts
src/pages/viewer/: App.tsx  index.html  index.tsx
wasm/: Cargo.toml
wasm/src/: dmi.rs  lib.rs
